Change hero section on mobile and repair menu

--- a/css/style.css
+++ b/css/style.css
@@ -367,8 +367,29 @@ body {
         display: none;
     }
 
-    .hero__section {
-        /* display: none; */
+    .hero__section.show {
+        margin-top: 50vh;
+    }
+
+    .hero__section::after {
+        content: url('../assets/heart--small.png');
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        bottom: -90px;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 50%;
+        background-color: #fff;
+        width: 180px;
+        height: 180px;
+        text-align: center;
+        /* vertical-align: center; */
+    }
+
+    .arrow__section {
+        display: none;
     }
 
     .story__gallery {
